--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,12 @@
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Book Notes</title>
-<link rel="stylesheet" href="/css/style.css">
-<nav>
-  <a href="/">Home</a>
-  <% if (session && session.userId) { %>
-    <a href="/logout">Logout</a>
-  <% } else { %>
-    <a href="/login">Login</a>
-    <a href="/signup">Signup</a>
-  <% } %>
-</nav>
+<header>
+  <h1>Book Notes</h1>
+  <nav>
+    <a href="/">Home</a>
+    <% if (session && session.userId) { %>
+      <a href="/logout">Logout</a>
+    <% } else { %>
+      <a href="/login">Login</a>
+      <a href="/signup">Signup</a>
+    <% } %>
+  </nav>
+</header>
