--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,18 @@
 <header>
-  <h1>Book Notes</h1>
   <nav>
-    <a href="/">Home</a>
-    <% if (session && session.userId) { %>
-      <a href="/logout">Logout</a>
-    <% } else { %>
-      <a href="/login">Login</a>
-      <a href="/signup">Signup</a>
-    <% } %>
+    <div class="nav-left">
+      <a href="/" class="brand">Book Notes</a>
+      <a href="/">Home</a>
+    </div>
+    <div class="nav-right">
+      <% if (session && session.userId) { %>
+        <form action="/api/auth/logout" method="POST" class="nav-form">
+          <button type="submit" class="nav-button">Logout</button>
+        </form>
+      <% } else { %>
+        <a href="/login" class="nav-link">Login</a>
+        <a href="/signup" class="nav-link">Sign Up</a>
+      <% } %>
+    </div>
   </nav>
 </header>
